# unicode-invisible-cleaner

./: README.md  code.txt  config.py  input.txt  main.py  pyproject.toml  requirements.txt  setup.cfg
docs/: architecture.md
examples/: sample_usage.py
src/backend/: app.py
src/frontend/: index.html
src/frontend/static/: script.js  style.css
src/unicode_invisible_cleaner/: __init__.py  api.py  cleaner.py  cli.py  detector.py  normalizer.py  old_cli.py  run_from_file.py  unicode_types.py  utils.py
src/unicode_invisible_cleaner/algorithm/: regex_map.py  trie.py
tests/: test_cleaner.py  test_detector.py  test_integration.py
