[tool.poetry]
name = "unicode-invisible-cleaner"
version = "0.1.0"
description = "A tool for detecting and removing invisible Unicode text characters."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeveloperJarvis/unicode-invisible-cleaner"
repository = "https://github.com/DeveloperJarvis/unicode-invisible-cleaner"
keywords = ["unicode", "text", "cleaner", "invisible characters"]

[tool.poetry.dependencies]
python = "^3.7"
# regex = "^2023.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
