[metadata]
name = unicode-invisible-cleaner
version = 0.1.0
description = A tool for detecting and removing invisible Unicode text characters.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/unicode-invisible-cleaner
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    regex
    click

[options.packages.find]
where = src

[options.package_data]
unicode_invisible_cleaner = 
    algorithm/*.py

[options.entry_points]
console_scripts =
    unicode-cleaner = unicode_invisible_cleaner.cli:main